# rustycam

./: .gitignore  Cargo.toml  README.md
config/: cameras.toml
node/: Cargo.toml
node/src/: main.rs
rustycam-web/src/: App.js
rustycam-web/src/components/: CamInfo.js
rustyweb/: package-lock.json  package.json
src/: main.rs
src/discovery/: mod.rs
src/models/: camera.rs
src/services/: discovery.rs  mod.rs  onvif.rs
web/: package-lock.json  package.json
web/src/: index.js
web/src/components/: Home.js
