[package]
name = "pamera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onvif = { git = "https://github.com/lumeohq/onvif-rs" }
toml = "0.8.1"
serde = "1.0.136"
serde_derive = "1.0.136"
tokio = { version = "1.32.0", features = ["full"] }
retina = "0.4.5"
reqwest = "0.11"
serde-xml-rs = "0.6.0"
lazy_static = "1.0"
socket2 = { version = "0.3.4", features = ["reuseport"] }
xmltree = "0.10.3"
