[package]
name = "pamera"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8.1"
serde = "1.0.136"
serde_derive = "1.0.136"
tokio = { version = "1.32.0", features = ["full"] }
retina = "0.4.5"
reqwest = "0.11"
serde-xml-rs = "0.6.0"
lazy_static = "1.0"
xmltree = "0.10.3"
futures-util = "0.3.28"
async-trait = "0.1.50"
log = "0.4"
env_logger = "0.10.0"
schema = { version = "0.1.0", git = "https://github.com/lumeohq/onvif-rs.git", default-features = false, features = ["analytics", "devicemgmt", "event", "media", "ptz"] }
onvif = {  version = "0.1.0", git = "https://github.com/lumeohq/onvif-rs.git" }
webrtc = "0.9.0"
